ec2linux.tf
provider "aws" {
region = "us-west-2"
access_key = "AKIAT4SB7IHLV7KTR37X"
secret_key = "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"
}
#1. Create vpc
resource "aws_vpc" "prod-vpc" {
cidr_block = "10.0.0.0/16"
tags = {
Nme = "production"
}
}
#2. Internet gateway
resource "aws_internet_gateway" "gw" {
vpc_id = aws_vpc.prod-vpc.id
tags = {
Name = "IGW"
}
}
#3. Creat Custom Route Table
resource "aws_route_table" "prod-route-table" {
vpc_id = aws_vpc.prod-vpc.id

route {
cidr_block = "0.0.0.0/0"
gateway_id = aws_internet_gateway.gw.id
}

route {
ipv6_cidr_block = "::/0"
gateway_id = aws_internet_gateway.gw.id
}

tags = {
Name = "Prod"
}
}
#4. Create a subnet
resource "aws_subnet" "subnet-1" {
vpc_id = aws_vpc.prod-vpc.id
cidr_block = "10.0.1.0/24"
availability_zone = "us-west-2a"

tags = {
Name = "prod-subnet"
}
}
#5. Associate subnet with Route Table
resource "aws_route_table_association" "a" {
subnet_id = aws_subnet.subnet-1.id
route_table_id = aws_route_table.prod-route-table.id
}
#6. Create Security Group to allow port 22,80,443
resource "aws_security_group" "allow_web" {
name = "allow_web_traffic"
description = "Allow web inbound traffic"
vpc_id = aws_vpc.prod-vpc.id

ingress {
description = "HTTPS"
from_port = 443
to_port = 443
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}
ingress {
description = "HTTP"
from_port = 80
to_port = 80
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}
ingress {
description = "SSH"
from_port = 22
to_port = 22
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

egress {
from_port = 0
to_port = 0
protocol = "-1"
cidr_blocks = ["0.0.0.0/0"]
}

tags = {
Name = "allow_web"
}
}
#7. Create a network interface with an ip in the subnet that was created in step 4
resource "aws_network_interface" "Web-server-nic" {
subnet_id = aws_subnet.subnet-1.id
private_ips = ["10.0.1.50"]
security_groups = [aws_security_group.allow_web.id]
}
#8. Assign an elastic IP to the netwrok created in step?
resource "aws_eip" "one" {
vpc = true
network_interface = aws_network_interface.Web-server-nic.id
associate_with_private_ip = "10.0.1.50"
depends_on = [aws_internet_gateway.gw]
}
#9. Create Ubuntu server and install /enable apache2
resource "aws_instance" "web-server-instance" {
ami = "ami-0d70546e43a941d70"
instance_type = "t2.micro"
availability_zone = "us-west-2a"
key_name ="main-key1"
network_interface {
device_index = 0
network_interface_id = aws_network_interface.Web-server-nic.id
}
user_data = <<-EOF
#!/bin/bash
sudo apt update -y
sudo apt install apache2 -y
sudo systemctl start apache2
sudo bash -c 'echo your very first web server > /var/www/html/index.html'
EOF
tags = {
Name = "web-server"
}
}

output "server_private_ip"{
value = aws_instance.web-server-instance.private_ip
}

output "server_id"{
value = aws_instance.web-server-instance.id
}
